sun.misc.BASE64Decoder/Encoder replacement